--- a/Trabalho 1/Cliente.ipynb
+++ b/Trabalho 1/Cliente.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "import xmlrpc.client"
+    "import xmlrpc.client\n",
+    "import psycopg2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -24,7 +25,7 @@
      "text": [
       "Eu sou o Cliente\n",
       "20\n",
-      "['2012785164', '78', '7.0']\n"
+      "True\n"
      ]
     }
    ],
@@ -34,9 +35,8 @@
     "    print(\"Eu sou o Cliente\")\n",
     "    cliente = xmlrpc.client.ServerProxy(\"http://localhost:8080/\")\n",
     "              \n",
-    "    \n",
     "    print(cliente.add(10,10))\n",
-    "    print(cliente.cadastrarNota(\"2012785164\",\"78\",\"7.0\"))\n",
+    "    print(cliente.cadastrarNota(2013780001,'A',10))\n",
     "    \n",
     "if __name__ == \"__main__\":\n",
     "    main()\n"
@@ -53,10 +53,11 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python3"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
@@ -68,7 +69,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
