--- a/Trabalho 1/Cliente.ipynb
+++ b/Trabalho 1/Cliente.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -23,24 +23,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Eu sou o Cliente\n",
-      "20\n",
-      "True\n"
+      "Conectando ao servidor...\n",
+      "7.07\n"
      ]
     }
    ],
    "source": [
     "\n",
     "def main():\n",
-    "    print(\"Eu sou o Cliente\")\n",
+    "    print(\"Conectando ao servidor...\")\n",
     "    cliente = xmlrpc.client.ServerProxy(\"http://localhost:8080/\")\n",
     "              \n",
-    "    print(cliente.add(10,10))\n",
-    "    print(cliente.cadastrarNota(2013780001,'A',10))\n",
+    "    #print(cliente.cadastrarNota(2013785013,'TM03',0))\n",
+    "    #print(cliente.listarNotas(2013785012))\n",
+    "    #print(cliente.consultarNota(2013785011,'TM00'))\n",
+    "    print(cliente.consultarCR(2013785011))\n",
     "    \n",
     "if __name__ == \"__main__\":\n",
     "    main()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
